--- a/tests/cassettes/test_shipment_lowest_rate.yaml
+++ b/tests/cassettes/test_shipment_lowest_rate.yaml
@@ -33,17 +33,17 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-04-26T16:59:14Z","is_return":false,"messages":[],"mode":"test","options":{"label_format":"PNG","invoice_number":"123","currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":"123","status":"unknown","tracking_code":null,"updated_at":"2022-04-26T16:59:14Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":{"id":"cstinfo_85be9278977c4dc093c20654d6fb5bd3","object":"CustomsInfo","created_at":"2022-04-26T16:59:14Z","updated_at":"2022-04-26T16:59:14Z","contents_explanation":"","contents_type":"merchandise","customs_certify":true,"customs_signer":"Steve
-        Brule","eel_pfc":"NOEEI 30.37(a)","non_delivery_option":"return","restriction_comments":null,"restriction_type":"none","mode":"test","declaration":null,"customs_items":[{"id":"cstitem_626bcf0b73024b6b852f8edcc3ea70c8","object":"CustomsItem","created_at":"2022-04-26T16:59:14Z","updated_at":"2022-04-26T16:59:14Z","description":"Sweet
-        shirts","hs_tariff_number":"654321","origin_country":"US","quantity":2,"value":"23.0","weight":11.0,"code":null,"mode":"test","manufacturer":null,"currency":null,"eccn":null,"printed_commodity_identifier":null}]},"from_address":{"id":"adr_33bd430dc58211ec8394ac1f6b0a0d1e","object":"Address","created_at":"2022-04-26T16:59:14+00:00","updated_at":"2022-04-26T16:59:14+00:00","name":"Jack
+      string: '{"created_at":"2022-04-28T18:57:34Z","is_return":false,"messages":[],"mode":"test","options":{"label_format":"PNG","invoice_number":"123","currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":"123","status":"unknown","tracking_code":null,"updated_at":"2022-04-28T18:57:34Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":{"id":"cstinfo_2b0e819d57f44670a6c2b773091d6e46","object":"CustomsInfo","created_at":"2022-04-28T18:57:34Z","updated_at":"2022-04-28T18:57:34Z","contents_explanation":"","contents_type":"merchandise","customs_certify":true,"customs_signer":"Steve
+        Brule","eel_pfc":"NOEEI 30.37(a)","non_delivery_option":"return","restriction_comments":null,"restriction_type":"none","mode":"test","declaration":null,"customs_items":[{"id":"cstitem_25b0a95924f3436f8833dda24d887cf5","object":"CustomsItem","created_at":"2022-04-28T18:57:34Z","updated_at":"2022-04-28T18:57:34Z","description":"Sweet
+        shirts","hs_tariff_number":"654321","origin_country":"US","quantity":2,"value":"23.0","weight":11.0,"code":null,"mode":"test","manufacturer":null,"currency":null,"eccn":null,"printed_commodity_identifier":null}]},"from_address":{"id":"adr_103ed611c72511ec8613ac1f6bc72124","object":"Address","created_at":"2022-04-28T18:57:34+00:00","updated_at":"2022-04-28T18:57:34+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_1f6e582097cd400bb1d294ad99d19687","object":"Parcel","created_at":"2022-04-26T16:59:14Z","updated_at":"2022-04-26T16:59:14Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_9871f093b9354f189753cadfbc8e97e2","object":"Rate","created_at":"2022-04-26T16:59:14Z","updated_at":"2022-04-26T16:59:14Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_9127354bd9cb4a568b84a272d4fbde8e","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_9374d7bf72d44b69892d9d1f108b8f1a","object":"Rate","created_at":"2022-04-26T16:59:14Z","updated_at":"2022-04-26T16:59:14Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_9127354bd9cb4a568b84a272d4fbde8e","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_cae2d2443ea941959d96419daa3ac8e2","object":"Rate","created_at":"2022-04-26T16:59:14Z","updated_at":"2022-04-26T16:59:14Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_9127354bd9cb4a568b84a272d4fbde8e","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_777a2f51b0be4e9aa68505da20b96604","object":"Rate","created_at":"2022-04-26T16:59:14Z","updated_at":"2022-04-26T16:59:14Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_9127354bd9cb4a568b84a272d4fbde8e","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_33bb7674c58211ec802bac1f6bc7b362","object":"Address","created_at":"2022-04-26T16:59:14+00:00","updated_at":"2022-04-26T16:59:14+00:00","name":"Jack
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_8a439a1e8e8a4bc79be344a854a415ef","object":"Parcel","created_at":"2022-04-28T18:57:34Z","updated_at":"2022-04-28T18:57:34Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_ff3d6ffaee6c46ee8a5a0e8d394b38cc","object":"Rate","created_at":"2022-04-28T18:57:34Z","updated_at":"2022-04-28T18:57:34Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_efa76747ef7142ec91858b4c52ae9297","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_dad038bfeb844531972ea935cffb468a","object":"Rate","created_at":"2022-04-28T18:57:34Z","updated_at":"2022-04-28T18:57:34Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_efa76747ef7142ec91858b4c52ae9297","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_bd463d0e6b064dc8a2e41a0560192c2a","object":"Rate","created_at":"2022-04-28T18:57:34Z","updated_at":"2022-04-28T18:57:34Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_efa76747ef7142ec91858b4c52ae9297","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_b18ba7be0b1f43bcab6aefdb288f1d80","object":"Rate","created_at":"2022-04-28T18:57:34Z","updated_at":"2022-04-28T18:57:34Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_efa76747ef7142ec91858b4c52ae9297","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_103ccdf9c72511eca6c7ac1f6bc7b362","object":"Address","created_at":"2022-04-28T18:57:34+00:00","updated_at":"2022-04-28T18:57:34+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_33bd430dc58211ec8394ac1f6b0a0d1e","object":"Address","created_at":"2022-04-26T16:59:14+00:00","updated_at":"2022-04-26T16:59:14+00:00","name":"Jack
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_103ed611c72511ec8613ac1f6bc72124","object":"Address","created_at":"2022-04-28T18:57:34+00:00","updated_at":"2022-04-28T18:57:34+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_33bb7674c58211ec802bac1f6bc7b362","object":"Address","created_at":"2022-04-26T16:59:14+00:00","updated_at":"2022-04-26T16:59:14+00:00","name":"Jack
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_103ccdf9c72511eca6c7ac1f6bc7b362","object":"Address","created_at":"2022-04-28T18:57:34+00:00","updated_at":"2022-04-28T18:57:34+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_9127354bd9cb4a568b84a272d4fbde8e","object":"Shipment"}'
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_efa76747ef7142ec91858b4c52ae9297","object":"Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -52,11 +52,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"2952f7fd65b2c510c571ecea609afe56"
+      - W/"91633abe966841fad14c77f99fcf1245"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_9127354bd9cb4a568b84a272d4fbde8e
+      - /api/v2/shipments/shp_efa76747ef7142ec91858b4c52ae9297
       pragma:
       - no-cache
       referrer-policy:
@@ -72,21 +72,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 86551bd2626824e2e786b41f0013d55e
+      - f1b599b4626ae39ee7872fc0000cc90c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb3wdc fde591f008
+      - intlb2nuq fde591f008
+      - extlb2nuq fde591f008
       x-runtime:
-      - '0.378448'
+      - '0.288933'
       x-version-label:
-      - easypost-202204251804-93ddab36b5-master
+      - easypost-202204281816-b5dc9c446b-master
       x-xss-protection:
       - 1; mode=block
     status:
